# plugin-orm

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python/: action.yml
.github/workflows/: release.yml
nonebot_plugin_orm/: __init__.py  __main__.py  config.py  env.py  exception.py  migrate.py  model.py  param.py  sql.py  utils.py
nonebot_plugin_orm/templates/generic/: env.py  script.py.mako
nonebot_plugin_orm/templates/multidb/: README  env.py  script.py.mako
