[project]
name = "nonebot-plugin-orm"
version = "0.2.0"
description = "SQLAlchemy ORM support for nonebot"
authors = [
    { name = "yanyongyu", email = "yyy@nonebot.dev" },
    { name = "ProgramRipper", email = "programripper@foxmail.com" },
]
dependencies = [
    "alembic~=1.12",
    "click~=8.1",
    "importlib-metadata~=6.8; python_version < '3.10'",
    "importlib-resources~=6.1; python_version < '3.12'",
    "nonebot2~=2.1",
    "sqlalchemy~=2.0",
    "typing-extensions~=4.8; python_version < '3.12'",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["nonebot", "orm", "sqlalchemy"]

[project.urls]
homepage = "https://github.com/nonebot/plugin-orm"
repository = "https://github.com/nonebot/plugin-orm"
documentation = "https://github.com/nonebot/plugin-orm"

[project.optional-dependencies]
default = ["aiosqlite~=0.19", "nonebot-plugin-localstore~=0.5"]
mysql = ["aiomysql~=0.2"]
asyncmy = ["asyncmy~=0.2"]
aiomysql = ["aiomysql~=0.2"]
postgresql = ["psycopg[binary]~=3.1"]
psycopg = ["psycopg[binary]~=3.1"]
asyncpg = ["asyncpg~=0.28"]
sqlite = ["aiosqlite~=0.19"]
aiosqlite = ["aiosqlite~=0.19"]

[project.entry-points.nb_scripts]
orm = "nonebot_plugin_orm.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "aiosqlite~=0.19",
    "black~=23.7",
    "isort~=5.12",
    "nonebot-plugin-localstore~=0.5",
    "nonemoji~=0.1",
    "pre-commit~=3.4",
    "pycln~=2.3",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = [
    "importlib_metadata",
    "importlib_resources",
    "typing_extensions",
]

[tool.pycln]
path = "."

[tool.pyright]
pythonVersion = "3.8"
